# Open-Multiplexer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
docs/: scroll_buffer_dev_notes.md
src/apis/: alias.hpp  primary_console.cpp  process.cpp  pseudo_consle.cpp  windows.cpp
src/examples/: CMakeLists.txt  cmake_install.cmake
src/examples/microsoft/: echocon.cpp  ms_example.cpp
src/omux/: action_factory.cpp  action_factory.hpp  actions.cpp  actions.hpp  console.cpp  console.hpp  omux.cpp  primary_console.cpp  process.cpp
src/test/: catch_main.cpp  omux.cpp  test_keybinds.cpp  test_omux.cpp  test_process.cpp  windows_apis.cpp
